<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:autofillHints="sai"
        android:inputType="text" />
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:layout_below="@id/Name"
        android:autofillHints="sai"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:layout_below="@id/email"
        android:autofillHints="sai"
        android:inputType="phone" />
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:layout_below="@id/phone"
        android:autofillHints="sai"
        android:inputType="textPostalAddress" />
    <Button
        android:id="@+id/save"
        android:layout_below="@id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:onClick="save_edit"
        android:text="@string/save"
        tools:ignore="UsingOnClickInXml" />
</RelativeLayout>