<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/img_3">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/tkr" />
        <EditText
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="450dp"
            android:layout_marginStart="100dp"
            android:hint="@string/enter_id"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textStyle="bold"
            android:autofillHints="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/user_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/user_id"
            android:layout_alignStart="@id/user_id"
            android:textColor="@color/textColor"
            android:hint="@string/password"
            android:textColorHint="@color/textColor"
            android:textStyle="bold"
            android:autofillHints="1234"
            android:inputType="number" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_pwd"
        android:text="@string/login"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>