<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_bg"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/class_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/it_i_year_a"
        android:textColor="#00796B"
        android:textStyle="bold"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/more"
        android:background="#ADCD92"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/material_motion_easing_accelerated" />
    <LinearLayout
        android:layout_below="@id/class_name"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/presenties"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/present"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:text="@string/presenties"/>
        <TextView
            android:id="@+id/total"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/absent"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</RelativeLayout>